<resources>
    <string name="app_name_prod">MoviesWorld</string>
    <string name="app_name_dev">MovieWorldDev</string>
    <string name="app_name_stage">MovieWorldStage</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_lbl_discover">Discover</string>
    <string name="txt_lbl_official_review">Official Review</string>
    <string name="txt_lbl_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="txt_lbl_check_movie_showtimes">Check Movie\nShowtimes</string>

    <string name="txt_lbl_see_more"><u>SEE MORE</u></string>
    <string name="txt_lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="txt_lbl_more_best_actors"><u>MORE ACTORS</u></string>
    <string name="txt_lbl_more_creator"><u>MORE CREATORS</u></string>

    <string name="txt_lbl_showcases">Show Case</string>
    <string name="txt_lbl_best_actors">Best Actors</string>
    <string name="txt_lbl_actors">Actors</string>
    <string name="txt_lbl_creator">Creators</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_lbl_play_trailer">Play Trailer</string>
    <string name="btn_lbl_rate_movie">Rate Movie</string>
    <string name="txt_lbl_storyline">StoryLine</string>
    <string name="txt_lbl_about_film">About Film</string>
    <string name="txt_lbl_original_title">Original title:</string>
    <string name="txt_lbl_type">Type:</string>
    <string name="txt_lbl_production">Production:</string>
    <string name="txt_lbl_premiere">Premiere:</string>
    <string name="txt_lbl_description">Description</string>
</resources>