<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium_2">

    <TextView
        android:id="@+id/tvAboutFilmTxt"
        style="@style/GrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_lbl_about_film" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="4">

        <TextView
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/txt_lbl_original_title"
            android:textColor="@color/third_text" />

        <TextView
            android:id="@+id/tvOriginalTitle"
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_original_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="4">

        <TextView
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/txt_lbl_type"
            android:textColor="@color/third_text" />

        <TextView
            android:id="@+id/tvType"
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_original_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="4">

        <TextView
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/txt_lbl_production"
            android:textColor="@color/third_text" />

        <TextView
            android:id="@+id/tvProduction"
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_original_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="4">

        <TextView
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/txt_lbl_premiere"
            android:textColor="@color/third_text" />

        <TextView
            android:id="@+id/tvPremiere"
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_original_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="4">

        <TextView
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/txt_lbl_description"
            android:textColor="@color/third_text" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/WhiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:paddingStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_original_title"
            android:maxLines="5"
            android:ellipsize="end"/>

    </LinearLayout>


</LinearLayout>